# liana

./: .cirrus.yml  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_COINCUBE.md  CHANGELOG_LIANA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GNUmakefile  LICENCE  Makefile  NOTICE  README.md  SECURITY.md  SONARQUBE_SETUP.md  UI_GUIDELINES.md  breez_usdt_liquid_development_plan.md  build_common.rs  docker-compose.yml  flake.nix  lcov.info  make.bat  resources  rust-toolchain.toml  sonar-project.properties  wildcard-cleanup-plan.md
baaca/: Cargo.toml
baaca/src/: client.rs  color.rs  gui.rs  ledger.rs  ledger_lib.rs  ledger_manager.rs  logger.rs  main.rs  service.rs  theme.rs
business-installer/: Cargo.toml  DEBUG.md  FLOW.md  ROADMAP.md  STRUCTURE.md  UI_GUIDELINES.md
business-installer/src/: backend.rs  client.rs  installer.rs  lib.rs
business-installer/src/state/: app.rs  message.rs  mod.rs  update.rs
business-installer/src/views/: mod.rs  org_select.rs  wallet_select.rs  xpub.rs
coincube-core/: Cargo.toml
coincube-core/src/: lib.rs  signer.rs  spend.rs
coincube-core/src/border_wallet/: error.rs  grid.rs  mod.rs  pattern.rs
coincube-core/src/descriptors/: analysis.rs  mod.rs
coincube-gui/: Cargo.toml  README.md  build.rs  liana-gui.desktop
coincube-gui/assets/: knots_signing_key.asc
coincube-gui/src/: backup.rs  delete.rs  dir.rs  download.rs  export.rs  feature_flags.rs  help.rs  home.rs  hw.rs  launcher.rs  lib.rs  loader.rs  loading.rs  logger.rs  main.rs  pin_entry.rs  pin_input.rs  recover_own_cube.rs  recover_vault.rs  signer.rs
coincube-gui/src/app/: cache.rs  error.rs  features.rs  menu.rs  message.rs  mod.rs  wallet.rs
coincube-gui/src/daemon/: dummy.rs  embedded.rs  mod.rs  model.rs
coincube-gui/src/gui/: mod.rs  pane.rs  tab.rs
coincube-gui/src/installer/: config.rs  connect_vault.rs  context.rs  decrypt.rs  descriptor.rs  message.rs  migration.rs  mod.rs  prompt.rs
coincube-gui/src/node/: bitcoind.rs  electrum.rs  esplora.rs  mod.rs
coincube-gui/src/phone_signer/: errors.rs  identity.rs  mdns.rs  mod.rs  pairing.rs  pairing_listener.rs  pairing_store.rs  protocol.rs  tls.rs  transport.rs
coincube-gui/src/services/: mod.rs  signing_grpc.rs  sse.rs
coincube-gui/src/utils/: mod.rs  sandbox.rs
coincube-gui/test_assets/: coincube-backup-2025-06-23T13-23-54.json  global_settings.json  liana-jz5sm0xn.txt  v0.bed
coincube-gui/tests/: connect_grpc.rs  duress_e2e.rs  local_signer_handshake_timeout.rs  local_signer_loopback.rs  local_signer_pair_and_sign.rs  local_signer_pairing.rs  signing_flow.rs
coincube-spark-bridge/: Cargo.toml
coincube-spark-bridge/src/: main.rs  sdk_adapter.rs  server.rs
coincube-spark-protocol/: Cargo.toml
coincube-spark-protocol/src/: lib.rs
coincube-spark-protocol/tests/: wire_contract.rs
coincube-ui/: Cargo.toml  README.md
coincube-ui/src/: color.rs  font.rs  icon.rs  image.rs  lib.rs
coincube-ui/src/component/: amount.rs  badge.rs  button.rs  card.rs  event.rs  form.rs  hw.rs  kage_quote.rs  mod.rs  modal.rs  notification.rs  pagination.rs  quote_display.rs  spinner.rs  tabs.rs  text.rs  toast.rs  tooltip.rs  transaction.rs
coincube-ui/src/theme/: banner.rs  button.rs  container.rs  mod.rs  notification.rs  overlay.rs  palette.rs  pick_list.rs  pill.rs  progress_bar.rs  rule.rs  scrollable.rs  svg.rs  text.rs  text_input.rs  toggler.rs
coincube-ui/src/widget/: cursor.rs  menu.rs  mod.rs  modal.rs  text_input.rs
coincube-ui/static/: loading-quotes.json
coincubed/: Cargo.toml
coincubed/src/: config.rs  datadir.rs  lib.rs  testutils.rs
coincubed/src/bitcoin/: mod.rs
coincubed/src/commands/: mod.rs  utils.rs
coincubed/src/database/: mod.rs
coincubed/src/jsonrpc/: api.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: descriptor_parse.rs  descriptors.rs
gui/: Cargo.toml  README.md  env  shell.nix
gui/src/: bitcoind.rs  conversion.rs  datadir.rs  download.rs  hw.rs  launcher.rs  ledger_upgrade.rs  lib.rs  loader.rs  logger.rs  main.rs  signer.rs  time.rs
gui/src/app/: cache.rs  config.rs  context.rs  error.rs  menu.rs  message.rs  mod.rs  settings.rs  state.rs  wallet.rs
gui/src/daemon/: embedded.rs  mod.rs  model.rs
gui/src/installer/: config.rs  context.rs  message.rs  mod.rs  prompt.rs  view.rs
gui/src/lianalite/: login.rs  mod.rs
gui/src/node/: bitcoind.rs  electrum.rs  mod.rs
gui/src/ui/: color.rs  font.rs  icon.rs  mod.rs  util.rs
gui/ui/: Cargo.toml
liana/: Cargo.toml
liana-business/: Cargo.toml  FLOW.md  REGISTRATION_STEP.md  ROADMAP.md  STRUCTURE.md  UI_GUIDELINES.md  WSS_PROTOCOL.md  build.rs
liana-business-server/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
liana-business-server/src/: auth.rs  connection.rs  handler.rs  http.rs  main.rs  server.rs  state.rs  tests.rs
liana-business-tester/: Cargo.toml
liana-business-tester/src/: main.rs
liana-business/business-installer/: Cargo.toml  FLOW.md  STRUCTURE.md
liana-business/business-settings/: Cargo.toml
liana-business/liana-connect/: Cargo.toml  WSS_BUSINESS.md
liana-business/src/: backend.rs  client.rs  lib.rs  main.rs  models.rs  wss.rs
liana-connect/: Cargo.toml  WSS_BUSINESS.md
liana-connect/src/: lib.rs  protocol.rs
liana-gui/: Cargo.toml  README.md  build.rs  liana-gui.desktop  shell.nix
liana-gui/src/: args.rs  backup.rs  decrypt.rs  delete.rs  dir.rs  download.rs  export.rs  help.rs  hw.rs  launcher.rs  lib.rs  loader.rs  logger.rs  main.rs  pin_entry.rs  signer.rs  window.rs
liana-gui/test_assets/: ccxp-C658B283.json  coldcard-export.json  global_settings.json  liana-backup-2025-06-23T13-23-54.json
liana-i18n/: Cargo.toml
liana-i18n/locales/: en.ftl  fr.ftl  it.ftl  pt-PT.ftl
liana-i18n/src/: lib.rs
liana-ui/: BUSINESS.md  Cargo.toml  README.md
liana-ui/src/: color.rs  font.rs  icon.rs  image.rs  lib.rs  spacing.rs
liana/src/: config.rs  lib.rs  random.rs  signer.rs  spend.rs  testutils.rs
lianad/: Cargo.toml  build.rs
lianad/src/: config.rs  datadir.rs  lib.rs  testutils.rs
lianad/tests/: test_spend.rs
(+991 files in other folders)
