[workspace]
resolver = "2"
members = ["fuzz", "coincube-core", "coincubed", "coincube-gui", "coincube-ui"]
default-members = ["coincube-core", "coincubed", "coincube-gui", "coincube-ui"]

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"

[profile.dev.package.iced]
opt-level = 3

[profile.minimal.package.iced]
opt-level = 3
