[package]
name = "coincube-core"
version = "13.0.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>", "Coincube Team"]
edition = "2018"
repository = "https://github.com/coincubetech/coincube"
license-file = "LICENCE"
keywords = ["bitcoin", "wallet", "miniscript", "inheritance", "recovery", "active"]
description = "COINCUBE core development kit - Bitcoin wallet with Vault and Active spending"

[dependencies]
# For managing transactions (it re-exports the bitcoin crate)
miniscript = { version = "12.0", features = ["serde", "compiler", "base64"] }

# Coin selection algorithms for spend transaction creation.
bdk_coin_select = "0.4"
# We use TOML for the config, and JSON for RPC
serde = { version = "1.0", features = ["derive"] }

# Logging stuff
log = "0.4"

# Used for generating mnemonics
getrandom = "0.3.1"

# Used for the hot signer
bip39 = "2.0"
rand = "0.9.2"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
hex = "0.4.3"
zeroize = "1.8.2"

[lints.clippy]
uninlined_format_args = "allow"
large_enum_variant = "allow"
result_large_err = "allow"
