[package]
name = "coincube-gui"
version = "1.0.0"
readme = "README.md"
description = "COINCUBE GUI - Secure Bitcoin wallet with multisig and inheritance"
repository = "https://github.com/coincubetech/coincube"
license-file = "../LICENCE"
authors = ["Edouard Paris <m@edouard.paris>", "Coincube Team"]
edition = "2018"
resolver = "2"

[package.metadata.winres]
LegalCopyright = "Copyright © 2026"

[[bin]]
name = "coincube"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
async-hwi = "0.0.29"
breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", tag = "0.12.2" }
coincube-core = { path = "../coincube-core" }
coincube-spark-protocol = { path = "../coincube-spark-protocol" }
coincubed = { path = "../coincubed", default-features = false, features = [
	"nonblocking_shutdown",
] }
coincube-ui = { path = "../coincube-ui" }
backtrace = "0.3"
hex = "0.4.3"

iced = { version = "0.14.0", default-features = false, features = [
	"tokio",
	"svg",
	"canvas",
	"qr_code",
	"image-without-codecs",
	"advanced",
	"wgpu",
	"sipper",
	"crisp",
] }
iced_anim = "0.3"
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
iced_aw = { version = "0.13.0", features = ["context_menu"] }
iced_runtime = "0.14.0"

# Used to verify RFC-compliance of an email
email_address = "0.2.7"

tokio = { version = "1", features = [
	"signal",
	"process",
	"io-util",
	"sync",
	"time",
	"macros",
	"rt",
	"rt-multi-thread",
] }
async-fd-lock = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Used to ping bitcoind node
jsonrpc = "0.18"

# Logging stuff
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
log = "0.4"

dirs = "6"
toml = "0.9"
rand = "0.8"
chrono = "0.4.38"
mostro-core = "0.7"
nostr-sdk = { version = "0.43.0", features = ["nip06", "nip59"] }
bip39 = { version = "2.1.0", features = ["rand"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }

# Used for managing internal bitcoind
base64 = "0.22"
bitcoin_hashes = "0.16"
reqwest = { version = "0.12.18", default-features = false, features = [
	"json",
	"rustls-tls",
	"stream",
] }
reqwest-sse = "0.1"
rust-ini = "0.21"
rfd = "0.15.1"
fs4 = { version = "0.13", features = ["sync"] }

# Used for opening URLs in browser
open = "5.3"

# Webview for embedded browser functionality (wry-based)
iced_wry = { git = "https://github.com/sokorototo/iced_wry" }

keyring = { version = "3.2.0", features = [
	"apple-native",
	"windows-native",
	"sync-secret-service",
] }

encrypted_backup = { version = "0.0.1", default-features = false, features = [
	"miniscript_12_0",
], package = "bitcoin-encrypted-backup" }

zeroize = "1"
chacha20poly1305 = "0.10.1"
sha2 = "0.11.0"

dotenvy = "0.15.7"

[target.'cfg(windows)'.dependencies]
zip = { version = "0.6", default-features = false, features = [
	"bzip2",
	"deflate",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# objc2 0.6 has the PRF extension bindings (added with macOS 14 support).
# This coexists with the 0.5 version pulled in by iced/winit/wry — we're
# careful not to pass types between the two versions.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
	"NSData",
	"NSString",
	"NSError",
	"NSObject",
	"NSArray",
	"NSDictionary",
] }
objc2-authentication-services = { version = "0.3", features = [
	"ASFoundation",
	"ASAuthorization",
	"ASAuthorizationController",
	"ASAuthorizationRequest",
	"ASAuthorizationCredential",
	"ASAuthorizationPlatformPublicKeyCredentialProvider",
	"ASAuthorizationPlatformPublicKeyCredentialRegistrationRequest",
	"ASAuthorizationPlatformPublicKeyCredentialRegistration",
	"ASAuthorizationPlatformPublicKeyCredentialAssertionRequest",
	"ASAuthorizationPlatformPublicKeyCredentialAssertion",
	"ASAuthorizationPublicKeyCredentialRegistration",
	"ASAuthorizationPublicKeyCredentialAssertion",
	"ASAuthorizationPublicKeyCredentialRegistrationRequest",
	"ASAuthorizationPublicKeyCredentialAssertionRequest",
	"ASAuthorizationPublicKeyCredentialPRFRegistrationInput",
	"ASAuthorizationPublicKeyCredentialPRFAssertionInput",
	"ASAuthorizationPublicKeyCredentialPRFAssertionOutput",
	"ASAuthorizationPublicKeyCredentialPRFRegistrationOutput",
	"ASPublicKeyCredential",
	"ASAuthorizationPublicKeyCredentialDescriptor",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tar = { version = "0.4", default-features = false }
flate2 = { version = "1.0", default-features = false }
iced = { version = "0.14.0", features = ["x11", "wayland"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
dotenvy = "0.15.7"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"

[lints.clippy]
uninlined_format_args = "allow"
large_enum_variant = "allow"
result_large_err = "allow"

[package.metadata.winresource]
OriginalFilename = "coincube.exe"
FileDescription = "COINCUBE - Secure Bitcoin wallet with multisig and inheritance"
CompanyName = "COINCUBE TECHNOLOGY LLC"
InternalName = "Coincube"

[package.metadata.wix]
eula = false
