[package]
name = "coincube-spark-bridge"
version = "0.1.0"
edition = "2021"
license-file = "../LICENCE"
description = "Sibling process that hosts breez-sdk-spark and exposes it to coincube-gui over stdin/stdout JSON-RPC"

# Standalone single-member workspace with its own Cargo.lock — deliberately
# isolated from the main coincube workspace so that breez-sdk-spark's dep
# graph (tokio_with_wasm ^0.8.7, rusqlite 0.32.1 + libsqlite3-sys) doesn't
# have to be unified with breez-sdk-liquid's. See the main Cargo.toml
# `exclude = ["coincube-spark-bridge"]` entry for the paired side of this
# setup.
[workspace]
members = ["."]
resolver = "2"

[[bin]]
name = "coincube-spark-bridge"
path = "src/main.rs"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"

[dependencies]
coincube-spark-protocol = { path = "../coincube-spark-protocol" }
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.13.1" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "sync",
    "signal",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
