[package]
name = "coincube-spark-protocol"
version = "0.1.0"
edition = "2021"
license-file = "../LICENCE"
description = "JSON-RPC protocol types shared between coincube-gui and coincube-spark-bridge"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
