[package]
name = "coincubed"
version = "13.0.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>", "Coincube Team"]
edition = "2018"
repository = "https://github.com/coincubetech/coincube"
license-file = "LICENCE"
keywords = ["bitcoin", "wallet", "vault", "multisig", "active"]
description = "COINCUBE Vault wallet daemon - Secure Bitcoin multisig with inheritance"
exclude = [
	".github/",
	".cirrus.yml",
	"tests/",
	"test_data/",
	"contrib/",
	"pyproject.toml",
]

[[bin]]
name = "coincubed"
path = "src/bin/daemon.rs"

[[bin]]
name = "coincube-cli"
path = "src/bin/cli.rs"

[features]
nonblocking_shutdown = []

[dependencies]
coincube-core = { path = "../coincube-core" }
# For managing transactions (it re-exports the bitcoin crate)
miniscript = { version = "12.0", features = ["serde", "compiler", "base64"] }

# For Electrum backend.

# We use a branch of the v1.0.0-alpha.13 tag, which corresponds to the bdk_electrum v0.15 crate,
# in order to bump the electrum_client dependency to v0.21. This allows to use the "use-rustls-ring"
# feature and avoid the default aws-ls-rs provider from rustls, which would break the reproducible build
# (see https://github.com/aws/aws-lc-rs/issues/409).
bdk_electrum = { git = "https://github.com/wizardsardine/bdk", branch = "release/1.0.0-alpha.13", default-features = false, features = [
	"use-rustls-ring",
] }

# Don't reinvent the wheel
dirs = "6"

# We use TOML for the config, and JSON for RPC
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = { version = "1.0", features = ["raw_value"] }

# Logging stuff
log = "0.4"
fern = "0.7"

# In order to have a backtrace on panic, because the
# stdlib does not have a programmatic interface yet
# to work with our custom panic hook.
backtrace = "0.3"

rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "8e53118a3e1807dc9a9f59c5969fdff7e0416400", features = ["bundled", "unlock_notify"] }

# To talk to bitcoind
jsonrpc = { version = "0.18", features = [
	"minreq_http",
], default-features = false }

# import/export labels
bip329 = { version = "0.4", default-features = false }

[lints.clippy]
uninlined_format_args = "allow"
large_enum_variant = "allow"
result_large_err = "allow"
