[package]
name = "liana_gui"
version = "0.3.0"
readme = "README.md"
description = "Liana GUI"
repository = "https://github.com/wizardsardine/liana"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
resolver = "2"

[[bin]]
name = "liana-gui"
path = "src/main.rs"

[dependencies]
async-hwi = "0.0.4"
liana = { git = "https://github.com/wizardsardine/liana", branch = "master", default-features = false }
liana_ui = { path = "ui" }
backtrace = "0.3"
base64 = "0.13"

iced = { version = "0.7", default-features= false, features = ["tokio", "glow", "svg", "qr_code"] }
iced_native = "0.8"
iced_lazy = { version = "0.4"}

tokio = {version = "1.21.0", features = ["signal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Used to ping bitcoind node
jsonrpc = "0.12"

# Logging stuff
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
log = "0.4"

dirs = "3.0.1"
toml = "0.5"

chrono = "0.4"

[dev-dependencies]
tokio = {version = "1.9.0", features = ["rt", "macros"]}

[workspace]
members = ["ui"]
