[package]
name = "liana_gui"
version = "1.0.0"
readme = "README.md"
description = "Liana GUI"
repository = "https://github.com/wizardsardine/liana"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
resolver = "2"

[[bin]]
name = "liana-gui"
path = "src/main.rs"

[dependencies]
async-hwi = "0.0.11"
liana = { git = "https://github.com/wizardsardine/liana", branch = "master", default-features = false, features = ["nonblocking_shutdown"] }
liana_ui = { path = "ui" }
backtrace = "0.3"
base64 = "0.13"
hex = "0.4.3"

iced = { version = "0.9", default-features= false, features = ["tokio", "glow", "svg", "qr_code", "image"] }
iced_native = "0.10"
iced_lazy = { version = "0.6"}

tokio = {version = "1.21.0", features = ["signal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Used to ping bitcoind node
jsonrpc = "0.12"

# Logging stuff
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
log = "0.4"

dirs = "3.0.1"
toml = "0.5"

chrono = "0.4"

# Used for managing internal bitcoind
bitcoin_hashes = "0.12"
reqwest = { version = "0.11", default-features=false, features = ["rustls-tls"] }
rust-ini = "0.19.0"

[target.'cfg(windows)'.dependencies]
zip = { version = "0.6", default-features=false, features = ["bzip2", "deflate"] }

[target.'cfg(unix)'.dependencies]
tar = { version = "0.4", default-features=false }
flate2 = { version = "1.0", default-features=false }

[dev-dependencies]
tokio = {version = "1.9.0", features = ["rt", "macros"]}

[workspace]
members = ["ui"]
