[package]
name = "liana-business-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liana-business-server"
path = "src/main.rs"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
liana-connect = { path = "../liana-connect" }
miniscript = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
clap = { version = "4.5", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
chrono = { workspace = true }
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

