[package]
name = "liana-business-tester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liana-business-tester"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
liana-connect = { path = "../liana-connect" }
miniscript = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
uuid = { workspace = true, features = ["v4"] }
