[package]
name = "liana-business"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liana-business"
path = "src/main.rs"

[dependencies]
business-installer = { path = "../business-installer" }
iced = { workspace = true, default-features = false, features = ["tokio", "svg", "image", "wgpu", "tiny-skia"] }
liana = { path = "../liana" }
liana-gui = { path = "../liana-gui" }
liana-ui = { path = "../liana-ui" }
futures = "0.3"
