[package]
name = "liana-business"
version = "0.1.0"
edition = "2021"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2025"

[[bin]]
name = "liana-business"
path = "src/main.rs"

[dependencies]
business-installer = { path = "./business-installer" }
business-settings = { path = "./business-settings" }
iced = { workspace = true, default-features = false, features = ["tokio", "svg", "image", "wgpu", "tiny-skia"] }
iced_runtime = { workspace = true }
liana = { path = "../liana" }
liana-gui = { path = "../liana-gui" }
liana-ui = { path = "../liana-ui" }
backtrace = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
winresource = { workspace = true }
