[package]
name = "liana-business"
version = "1.0.0"
edition = "2021"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2025"

[[bin]]
name = "liana-business"
path = "src/main.rs"

[dependencies]
business-installer = { path = "./business-installer" }
async-hwi = { workspace = true }
iced = { workspace = true, default-features = false, features = ["tokio", "svg", "image", "wgpu", "tiny-skia", "x11", "wayland"] }
iced_runtime = { workspace = true }
liana = { path = "../liana" }
liana-gui = { path = "../liana-gui", features = ["skip-windows-icon"] }
liana-ui = { path = "../liana-ui" }
serde = { workspace = true }
serde_json = { workspace = true }
backtrace = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
winresource = { workspace = true }
