[package]
name = "liana-connect"
version = "0.1.0"
authors = ["Pyth <pythcoiner@proton.me>"]
edition = "2021"
repository = "https://github.com/wizardsardine/liana"
license-file = "LICENCE"
keywords = ["bitcoin", "wallet", "miniscript", "inheritance", "recovery"]
description = "Liana Connect shared types"

[lib]
name = "liana_connect"
path = "src/lib.rs"

[dependencies]
liana = { path = "../liana" }
async-trait = { workspace = true }
bip329 = { workspace = true, default-features = false }
bip39 = { workspace = true }
getrandom = { workspace = true }
miniscript = { workspace = true, features = ["serde"]}
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tungstenite = { workspace = true }
uuid = { workspace = true , features = ["serde", "v4"]}
