[package]
name = "liana-gui"
version = "12.0.0"
readme = "README.md"
description = "Liana GUI"
repository = "https://github.com/wizardsardine/liana"
license-file = "../LICENCE"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
resolver = "2"

[[bin]]
name = "coincube-vault"
path = "src/main.rs"

[features]
dev-meld = ["webview"]
dev-onramp = ["webview"]
webview = ["iced_webview"]
buysell = []

[dependencies]
async-trait = "0.1"
async-hwi = "0.0.29"
liana = { path = "../liana" }
lianad = { path = "../lianad", default-features = false, features = [
	"nonblocking_shutdown",
] }
liana-ui = { path = "../liana-ui" }
backtrace = "0.3"
hex = "0.4.3"

iced = { version = "0.13.1", default-features = false, features = [
	"tokio",
	"svg",
	"canvas",
	"qr_code",
	"image",
	"lazy",
	"advanced",
	"wgpu",
	"tiny-skia",
] }
iced_aw = { version = "0.12.2", features = ["context_menu"] }
iced_runtime = "0.13.1"

# Webview for embedded browser functionality (Ultralight-based)
iced_webview = { git = "https://github.com/coincubetech/iced_webview.git", features = [
	"ultralight",
], optional = true }

# Used to verify RFC-compliance of an email
email_address = "0.2.7"

tokio = { version = "1", features = ["signal"] }
async-fd-lock = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Used to ping bitcoind node
jsonrpc = "0.12"

# Logging stuff
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
log = "0.4"

dirs = "3.0.1"
toml = "0.5"

chrono = "0.4.38"

# Used for managing internal bitcoind
libc = "0.2"
base64 = "0.21"
bitcoin_hashes = "0.12"
reqwest = { version = "0.11", default-features = false, features = [
	"json",
	"rustls-tls",
	"stream",
] }
rust-ini = "0.19.0"
rfd = "0.15.1"
fs4 = { version = "0.13", features = ["sync"] }

# Used for opening URLs in browser
open = "5.3"
mimalloc = { version = "0.1.48", features = ["v3"] }

[target.'cfg(windows)'.dependencies]
zip = { version = "0.6", default-features = false, features = [
	"bzip2",
	"deflate",
] }

[target.'cfg(unix)'.dependencies]
tar = { version = "0.4", default-features = false }
flate2 = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"

[lints.clippy]
uninlined_format_args = "allow"
large_enum_variant = "allow"
result_large_err = "allow"

[package.metadata.winresource]
OriginalFilename = "coincube-vault.exe"
FileDescription = "The missing safety net for your coins, Coincube's Fork"
CompanyName = "Coincube"
InternalName = "Liana"

[package.metadata.wix]
eula = false
