[package]
name = "liana-gui"
version = "13.0.0"
readme = "README.md"
description = "Liana GUI"
repository = "https://github.com/wizardsardine/liana"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
resolver = "2"

[package.metadata.winres]
LegalCopyright = "Copyright © 2025"

[[bin]]
name = "liana-gui"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
async-hwi = { workspace = true }
liana = { path = "../liana" }
lianad = { path = "../lianad", default-features = false, features = ["nonblocking_shutdown"] }
liana-ui = { path = "../liana-ui" }
backtrace = { workspace = true }
hex = { workspace = true }

iced = { workspace = true, default-features = false, features = ["tokio", "svg", "qr_code", "image", "lazy", "wgpu", "advanced", "tiny-skia"] }
iced_aw = { workspace = true, features = ["context_menu"] }
iced_runtime = { workspace = true }

# Used to verify RFC-compliance of an email
email_address = { workspace = true }

tokio = { workspace = true, features = ["signal"] }
async-fd-lock = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Used to ping bitcoind node
jsonrpc = "0.12"

# Logging stuff
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

dirs = { workspace = true }
toml = { workspace = true }

chrono = { workspace = true }

# Used for managing internal bitcoind
libc = { workspace = true }
base64 = { workspace = true }
bitcoin_hashes = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "stream"] }
rust-ini = { workspace = true }
rfd = { workspace = true }
fs2 = { workspace = true }

# Used for opening URLs in browser
open = { workspace = true }

encrypted_backup = { workspace = true }

[target.'cfg(windows)'.dependencies]
zip = { workspace = true, default-features = false, features = ["bzip2", "deflate"] }

[target.'cfg(unix)'.dependencies]
tar = { workspace = true, default-features = false }
flate2 = { workspace = true, default-features = false }

[build-dependencies]
winresource = { workspace = true }

[dev-dependencies]
tokio = {workspace = true, features = ["rt", "macros"]}
