[package]
name = "liana-ui"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { workspace = true, default-features = false, features = ["svg", "image", "lazy", "qr_code", "advanced"] }
iced_aw = { workspace = true, features = ["context_menu"] }
iced_core = { workspace = true }
iced_runtime = { workspace = true }
unicode-segmentation = { workspace = true }
bitcoin = { workspace = true }
chrono = { workspace = true }
