[package]
name = "liana"
version = "11.0.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/wizardsardine/liana"
license-file = "LICENCE"
keywords = ["bitcoin", "wallet", "miniscript", "inheritance", "recovery"]
description = "Liana development kit"

[dependencies]
# For managing transactions (it re-exports the bitcoin crate)
miniscript = { version = "12.0", features = ["serde", "compiler", "base64"] }

# Coin selection algorithms for spend transaction creation.
bdk_coin_select = "0.4"
# We use TOML for the config, and JSON for RPC
serde = { version = "1.0", features = ["derive"] }

# Logging stuff
log = "0.4"

# Used for generating mnemonics
getrandom = "0.2"

# Used for the hot signer
bip39 = "2.0"

# Additional entropy for generating mnemonics
[target.'cfg(target_arch = "x86")'.dependencies]
rdrand = "0.8"
[target.'cfg(target_arch = "x86_64")'.dependencies]
rdrand = "0.8"
