[package]
name = "liana"
version = "13.0.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/wizardsardine/liana"
license-file = "LICENCE"
keywords = ["bitcoin", "wallet", "miniscript", "inheritance", "recovery"]
description = "Liana development kit"

[dependencies]
# For managing transactions (it re-exports the bitcoin crate)
miniscript = { workspace = true, features = ["serde", "compiler", "base64"] }

# Coin selection algorithms for spend transaction creation.
bdk_coin_select = { workspace = true }
# We use TOML for the config, and JSON for RPC
serde = { workspace = true, features = ["derive"] }

# Logging stuff
log = { workspace = true }

# Used for generating mnemonics
getrandom = { workspace = true }

# Used for the hot signer
bip39 = { workspace = true }

# Additional entropy for generating mnemonics
[target.'cfg(target_arch = "x86")'.dependencies]
rdrand = { workspace = true }
[target.'cfg(target_arch = "x86_64")'.dependencies]
rdrand = { workspace = true }
